Fix bug.
